--- a/initial_data_exploration.ipynb
+++ b/initial_data_exploration.ipynb
@@ -759,7 +759,7 @@
    "source": [
     "#### category\n",
     "\n",
-    "According to our data dictionary in [**process.md**](https://github.com/tedunderwood/meta2018/blob/master/process.md) the allowable codes here are\n",
+    "According to our data dictionary in **process.md** [https://github.com/tedunderwood/meta2018/blob/master/process.md](https://github.com/tedunderwood/meta2018/blob/master/process.md) the allowable codes here are\n",
     "\n",
     "    nonfic\n",
     "    reprint\n",
