--- a/initial_data_exploration.ipynb
+++ b/initial_data_exploration.ipynb
@@ -577,7 +577,7 @@
    "source": [
     "#### gender\n",
     "\n",
-    "According to our data model in [**process.md**](https://github.com/tedunderwood/meta2018/blob/master/process.md), the only allowable values here are m(ale), f(emale), u(nknown), and o(ther).\n",
+    "According to our data model in **process.md** [https://github.com/tedunderwood/meta2018/blob/master/process.md](https://github.com/tedunderwood/meta2018/blob/master/process.md), the only allowable values here are m(ale), f(emale), u(nknown), and o(ther).\n",
     "\n",
     "What values do we actually have?"
    ]
