--- a/analysis/compare_manycopies.ipynb
+++ b/analysis/compare_manycopies.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -22,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -42,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "jmc = pd.read_csv('../copies/jessicamanycopies.csv', index_col = 'docid')"
@@ -53,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmc = pd.read_csv('../copies/patrickmanycopies.csv', index_col = 'docid')"
@@ -64,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -106,9 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tmc = pd.read_csv('../copies/tedmanycopies.csv', index_col = 'docid')"
@@ -117,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -157,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -195,39 +179,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "jessica <=> patrick\n",
-      "Agreement on  45\n",
-      "Disagreement on  8\n",
-      "Percent disagreement  0.1509433962264151\n",
+      "Agreement on  50\n",
+      "Disagreement on  3\n",
+      "Percent disagreement  0.05660377358490566\n",
       "\n",
       "jessica <=> ted\n",
-      "Agreement on  51\n",
-      "Disagreement on  6\n",
-      "Percent disagreement  0.10526315789473684\n",
+      "Agreement on  54\n",
+      "Disagreement on  3\n",
+      "Percent disagreement  0.05263157894736842\n",
       "\n",
       "patrick <=> ted\n",
-      "Agreement on  47\n",
-      "Disagreement on  5\n",
-      "Percent disagreement  0.09615384615384616\n",
+      "Agreement on  51\n",
+      "Disagreement on  1\n",
+      "Percent disagreement  0.019230769230769232\n",
       "\n",
       "TOTAL: \n",
-      "Agreement on  143\n",
-      "Disagreement on  19\n",
-      "Percent disagreement  0.11728395061728394\n"
+      "Agreement on  155\n",
+      "Disagreement on  7\n",
+      "Percent disagreement  0.043209876543209874\n"
      ]
     }
    ],
    "source": [
     "names = ['jessica', 'patrick', 'ted']\n",
+    "\n",
+    "def fictionornot(category):\n",
+    "    if 'novel' in category:\n",
+    "        return True\n",
+    "    elif 'shortstories' in category:\n",
+    "        return True\n",
+    "    elif category == 'juvenile':\n",
+    "        return True\n",
+    "    elif category == 'reprint':\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "def compare_categories(dfa, dfb):\n",
     "    agree = 0\n",
@@ -237,8 +231,9 @@
     "        if idx not in dfb.index:\n",
     "            continue\n",
     "        else:\n",
-    "            onecat = dfa.loc[idx, 'category']\n",
-    "            othercat = dfb.loc[idx, 'category']\n",
+    "            onecat = fictionornot(dfa.loc[idx, 'category'])\n",
+    "            othercat = fictionornot(dfb.loc[idx, 'category'])\n",
+    "            \n",
     "            if onecat == othercat:\n",
     "                agree += 1\n",
     "            else:\n",
@@ -273,9 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -353,9 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -464,7 +455,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
